# soothing

./: pyproject.toml
paper/: paper.tex  references.bib
soothing/: numerical.py  symbolic.py  utils.py
