[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soothing"
version = "0.1.0"
description = "A Python package for numerical methods and symbolic computation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.7.0",
    "jaxtyping>=0.3.0",
    "numpy>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[tool.setuptools]
packages = ["soothing"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
